# campus-achievement-intelligence

./: .gitignore  .vercelignore  README.md  diff.txt  reset_pass.py  test_api.py  test_db.py  vercel.json  verify_final.py
ai_engine/: __init__.py  achievement_predictor.py  certificate_ocr.py  press_note_generator.py  scoring.py
backend/: .env.example  package.json  pyproject.toml  requirements.txt  server.js
backend/app/: __init__.py  auth.py  main.py  models.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: __init__.py  ai.py  certificates.py  events.py  leaderboard.py  participations.py
backend/app/core/: cloudinary_client.py  config.py  database.py  security.py
backend/app/routes/: __init__.py  auth.py  certificates.py  events.py  participations.py
backend/app/schemas/: ai.py  certificate.py  common.py  event.py  leaderboard.py  participation.py
backend/app/services/: ai_service.py  certificate_service.py  event_service.py  leaderboard_service.py  participation_service.py  score_service.py
backend/app/utils/: serializers.py
backend/middleware/: auth.js  roles.js
backend/models/: Certificate.js  Event.js  Participation.js  PressNote.js  User.js
backend/routes/: activity.js  admin.js  auth.js  hod.js
campus-achievement-ai/ai_engine/: achievement_predictor.py  certificate_ocr.py  press_note_generator.py  requirements.txt
campus-achievement-ai/backend/: auth.py  cleanup_db.py  database.py  email_utils.py  main.py  (+3 more)
dashboard/: streamlit_app.py
frontend/: .env.example  index.html  package.json
python/: ai_processing.py
(+36 files in other folders)
