[project]
name = "app"
version = "0.1.0"
dependencies = [ "fastapi", "uvicorn[standard]", "pymongo", "python-jose[cryptography]", "python-multipart", "python-dotenv", "cloudinary", "email-validator", "Pillow", "fpdf2", "bcrypt", "dnspython", "aiofiles", "certifi", "mongomock" ]
requires-python = "~=3.12.0"
